# rain_analysis_toolbox

./: .gitignore  DF_test_truc.npy  TM_test_truc.npy  project.toml  pyproject.toml  requirements.txt  setup.py
analysis_toolbox.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
aux_funcs/: .null-ls_784074_bin_data.py  aux_datetime.py  aux_funcs_read_files.py  bin_data.py  calculations_for_parsivel_data.py  color_devices.py  extract_events.py  filters.py  general.py  parse_filenames.py
individual_analysis/: analysis_variables.py
lab_mf_toolbox/: Additional_tools_v2.py  MF_analysis_JJ.py  MF_analysis_MM.py  MoM_234_JJ_MM.py  Multifractal_tools_box_Python_HMCo_ENPC_v_0_93.py  Tools_data_base_use_v3.py
multifractal_analysis/: __init__.py  cascade_simulations.py  data_prep.py  double_trace_moment.py  fractal_dimension.py  general.py  regression_solution.py  spectral.py  spectral_analysis.py  split_array.py  trace_moment.py
parsivel/: .null-ls_184726_parsivel_dataclass.py  .null-ls_256187_parsivel_dataclass.py  .null-ls_360921_parsivel_dataclass2.py  .null-ls_485394_parsivel_dataclass.py  .null-ls_666383_parsivel_dataclass.py  .null-ls_755664_parsivel_dataclass.py  .null-ls_814785_parsivel_dataclass.py  .null-ls_814785_parsivel_read2.py  .null-ls_882691_plots.py  .null-ls_967989_plots.py  __init__.py  dataclass.py  extract_events.py  filters.py  indicators.py  matrix_classes.py  parsivel_dataclass.py  parsivel_read.py  plots.py  read_write.py  slice_series.py
parsivel2/: .null-ls_886902_read_write.py  .null-ls_949751_parsivel_read2.py  __init__.py  extract_events.py  (+3 more)
(+144 files in other folders)
