[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "lab_mf_toolbox", 
  "multifractal_analysis", 
  "parsivel", 
  "stereo",
]


[project]
name="rain_analysis_toolbox"
version="0.0.2"
description="Simple tools for analysing distrometer data."
authors = [
  {name = "Marcio Matheus", email="marciomsantoss@gmail.com"}
]
maintainers = [
  {name = "Marcio Matheus", email="marciomsantoss@gmail.com"}
]
requires-python = ">= 3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "mypy",
]

[project.urls]
Repository = "https://github.com/marcinmss/rain_analysis_toolbox"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "numpy",
    "scipy",
    "matplotlib.pyplot",
    "pandas",
]
ignore_missing_imports = true
